--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.3",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.11"
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "typescript": "^5.0.4"
   }
 }
