--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spring": "^9.7.1",
+    "react-wavify": "^1.8.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
